tests/miz/pass/types/pass_type_elaboration_chained_local_mode_reserved_variable_membership_001.miz
definition
  mode BaseModeMembershipDef: BaseModeMembership is set;
end;

definition
  mode ChainModeMembershipDef: ChainModeMembership is BaseModeMembership;
end;

reserve x for ChainModeMembership;
reserve y for set;
theorem ChainedLocalModeReservedVariableMembershipPayloadBoundary: x in y;
