tests/miz/fail/types/fail_type_elaboration_local_attributed_reserve_evidence_gap_001.miz
definition
  let x be set;
  attr EmptyLikeDef: x is emptyish means thesis;
end;

reserve y for non emptyish set;
